--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["uv_build>=0.8.11,<0.9.0"]
+build-backend = "uv_build"
 
 [project]
 name = "qCHeff"
@@ -18,6 +18,7 @@ classifiers = [
   "Programming Language :: Python",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
 ]
 dependencies = [
   "more-itertools>=10.4.0",
@@ -25,16 +26,13 @@ dependencies = [
   "scipy>=1.13",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 models = [
     "qutip>=5.0.3.post1",
     "scqubits>=4.2",
 ]
 plot = [
     "matplotlib>=3.9.2",
-]
-cupy = [
-    "cupy-cuda12x>=13.3.0",
 ]
 docs = [
     "myst-parser>=4.0.0",
@@ -47,14 +45,40 @@ type = [
     "mypy>=1.11.2",
 ]
 
-[tool.uv]
-dev-dependencies = [
+cupy-cuda11x = [
+    "cupy-cuda11x>=13.3.0",
+]
+cupy-cuda12x = [
+    "cupy-cuda12x>=13.3.0",
+]
+
+test = [
     "pytest>=8.3.2",
     "pytest-benchmark>=4.0.0",
     "pytest-cov>=5.0.0",
-    "pytest-sugar>=1.0.0",
-    "nvtx>=0.2.10",
+    "pytest-rich>=0.2.0",
 ]
+
+[tool.coverage.run]
+source_pkgs = ["qcheff"]
+omit = [
+  "tests/*",
+  "src/qcheff/models/*",
+  "*/utils_gpu.py",
+]
+
+
+[tool.tox]
+requires = ["tox>=4", "tox-uv>=1.2.0"]
+env_list = ["docs", "3.13", "3.12", "3.11"]
+
+[tool.tox.env_run_base]
+description = "run unit tests"
+dependency_groups = ["test", "cupy-cuda12x", "models"]
+commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]
+
+
+
 
 [tool.mypy]
 disable_error_code = "import-untyped"
@@ -116,13 +140,5 @@ ban-relative-imports = "all"
 [tool.ruff.per-file-ignores]
 # Tests can use magic values, assertions, and relative imports
 "tests/**/*" = ["PLR2004", "S101", "TID252"]
-
-[tool.coverage.run]
-source_pkgs = ["qcheff"]
-omit = [
-  "tests/*",
-  "src/qcheff/models/*",
-  "*/utils_gpu.py",
-]
 
 
