--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,12 +35,12 @@
 # dependency groups for development. Not packaged in the distribution.
 [dependency-groups]
   docs = [
+    "furo>=2025.7.19",
     "myst-parser>=4.0.0",
-    "pydata-sphinx-theme>=0.15.4",
     "sphinx-autobuild>=2024.9.3",
     "sphinx-autodoc2>=0.5.0",
     "sphinx>=8.0.2",
-  ]
+]
   type = [
     "mypy>=1.11.2",
   ]
@@ -76,7 +76,6 @@
   description       = "build documentation"
   dependency_groups = [ "docs" ]
   commands          = [ [ "sphinx-autobuild", "{tox_root}/docs", "{tox_root}/docs/_build" ] ]
-
 
 [tool.mypy]
   disable_error_code = "import-untyped"
