--- a/examples/pyproject.toml
+++ b/examples/pyproject.toml
@@ -4,7 +4,7 @@ name = "qcheff-examples"
 version = "0.1.0"
 readme = "README.md"
 requires-python = ">= 3.11"
-dependencies = [ "joblib>=1.5.1,<2", "marimo>=0.14.17,<0.15", "seaborn>=0.13.2,<0.14", "polars>=1.32.3,<2", "pandas>=2.3.1,<3", "ipykernel>=6.30.1,<7"]
+dependencies = [ "joblib>=1.5.1,<2", "marimo>=0.14.17,<0.15", "seaborn>=0.13.2,<0.14", "polars>=1.32.3,<2", "pandas>=2.3.1,<3", "ipykernel>=6.30.1,<7", "ruff>=0.12.9,<0.13"]
 
 [build-system]
 requires = ["uv_build>=0.8.11,<0.9.0"]
