--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,12 +49,21 @@ test = [
   "pytest>=8.3.2",
   "pytest-benchmark>=4.0.0",
   "pytest-cov>=5.0.0",
+  "pytest-modern>=0.7.3",
   "pytest-rich>=0.2.0",
 ]
 lint = [
   "ruff>=0.12.9",
   "ty>=0.0.1a18",
 ]
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q"
+testpaths = [
+    "tests",
+]
+
 
 [tool.coverage.run]
 source_pkgs = [ "qcheff" ]
@@ -79,7 +88,7 @@ env_list = [ "docs", "lint", "format", "3.13", "3.12", "3.11" ]
 description       = "run unit tests"
 dependency_groups = [ "test" ]
 extras            = [ "cupy-cuda12x", "models" ]
-commands          = [ [ "pytest", "--rich", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
+commands          = [ [ "pytest" ] ]
 
 
 [tool.tox.env.lint]
