--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
 models       = [ "qutip>=5.0.3.post1", "scqubits>=4.2" ]
 cupy-cuda11x = [ "cupy-cuda11x>=13.3.0" ]
 cupy-cuda12x = [ "cupy-cuda12x>=13.3.0" ]
+cupy-cuda13x = [ "cupy-cuda13x>=13.6.0" ]
 
 # dependency groups for development. Not packaged in the distribution.
 [dependency-groups]
